# STM32CubeMP2

./: License.md  Package_license.html  Package_license.md  README.md  Release_Notes.html  SW_Security_Level.md  package.xml  sbom_cdx.json
Drivers/BSP/Components/rtl8211/: Release_Notes.md
Drivers/BSP/STM32MP215F-DK/: stm32mp215f_disco.h  stm32mp215f_disco_camera.c  stm32mp215f_disco_lcd.c  stm32mp215f_disco_stpmic2l.c
Drivers/BSP/STM32MP235F-DK/: stm32mp235f_disco.h  stm32mp235f_disco_usbpd_pwr.c
Drivers/BSP/STM32MP257F-DK/: stm32mp257f_disco.h  stm32mp257f_disco_usbpd_pwr.c
Drivers/BSP/STM32MP257F-EV1/: stm32mp257f_eval.h  stm32mp257f_eval_emmc.c  stm32mp257f_eval_emmc.h  stm32mp257f_eval_ospi.c  stm32mp257f_eval_ospi.h  stm32mp257f_eval_sd.c  stm32mp257f_eval_sd.h  stm32mp257f_eval_usbpd_pwr.c
Middlewares/ST/STM32_USBPD_Library/Core/: Release_Notes.md
Middlewares/ST/scmiagent/: mbox_scmi.c  mbox_scmi_conf.h  scmi.h  scmi_clock.c  scmi_helpers.c  scmi_regu.c
Projects/: Release_Notes.html  STM32CubeProjectsList.html
Projects/STM32MP215F-DK/Demonstrations/StarterApp_M33TD/: CMakeLists.txt  README.html  README.md
Projects/STM32MP215F-DK/Demonstrations/TestApp_M33TD/: CMakeLists.txt  README.html  README.md
Projects/STM32MP215F-DK/Templates/Template_StarterApp_M33TD/: CMakeLists.txt  README.html  README.md  stm32mp2xx_DDR_m33_ns.ld
Projects/STM32MP235F-DK/Demonstrations/StarterApp_M33TD/: CMakeLists.txt  README.html  README.md
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/: CMakeLists.txt
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/: CMakeLists.txt  README.html  README.md  stm32mp2xx_DDR_m33_ns.ld
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/CM33/NonSecure/Core/Inc/: main.h
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/CM33/NonSecure/Core/Src/: stm32mp2xx_hal_timebase_tim.c
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/CM33/NonSecure/FREERTOS/App/: nsappcore_config.h
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/CM33/NonSecure/FREERTOS/M33TD_NSAppCore/AppDriver/: led_driver.c
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/STM32CubeIDE/CM33/NonSecure/: .cproject  .project
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/STM32CubeIDE/CM33/Template_StarterApp_M33TD_CM33_trusted-firmware-m/: .cproject
Projects/STM32MP235F-DK/Templates/Template_StarterApp_M33TD/util/: cortex-m33-stm32mp2.cmake
Projects/STM32MP257F-DK/Demonstrations/CM0PLUS_DEMO/: CMakeLists.txt  Readme.txt
Projects/STM32MP257F-DK/Demonstrations/StarterApp_M33TD/: CMakeLists.txt  README.html  README.md  stm32mp2xx_DDR_m33_ns.ld
Projects/STM32MP257F-DK/Demonstrations/USBPD_DRP_UCSI/: CMakeLists.txt  Readme.txt
Projects/STM32MP257F-DK/Templates/Template_StarterApp_M33TD/: CMakeLists.txt  README.html  README.md
Projects/STM32MP257F-EV1/Demonstrations/: LICENSE.txt
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/: CMakeLists.txt  README.html  README.md
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/Core/Src/: stm32mp2xx_hal_msp.c  stm32mp2xx_hal_timebase_tim.c  stm32mp2xx_it.c
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/FREERTOS/App/: nsappcore_config.h
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/FREERTOS/M33TD_NSAppCore/AppDriver/: btn_monitor_driver.c
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/OpenAMP/Inc/: openamp.h  openamp_log.h
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/STM32CubeIDE/CM33/NonSecure/: .cproject  .project
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/STM32CubeIDE/CM33/StarterApp_M33TD_CM33_trusted-firmware-m/: .cproject
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/cmake/: hal_sources.cmake  nsappcore_sources.cmake
Projects/STM32MP257F-EV1/Demonstrations/TestApp_M33TD/: CMakeLists.txt  README.html  README.md
Projects/STM32MP257F-EV1/Demonstrations/USBPD_DRP_UCSI/: CMakeLists.txt  Readme.txt
Projects/STM32MP257F-EV1/Templates/Template_StarterApp_M33TD/: CMakeLists.txt  README.html  README.md  stm32mp2xx_DDR_m33_ns.ld
Utilities/M33TD_NSAppCore/: LICENSE.md  README.md
Utilities/M33TD_NSAppCore/App/Inc/: btn_monitor_task.h  display_task.h  logger_task.h  nscoreapp_init.h  openamp_task.h  remoteproc_task.h  scmi_mgr_task.h  userapp_task.h  wdg_monitor_task.h
Utilities/M33TD_NSAppCore/App/Src/: btn_monitor_task.c  display_task.c  logger_task.c  nscoreapp_init.c  openamp_task.c  remoteproc_task.c  scmi_mgr_task.c  userapp_task.c  wdg_monitor_task.c
Utilities/M33TD_NSAppCore/Assets/: splash_bmp_1024x600.h  splash_bmp_480x272.h
Utilities/M33TD_NSAppCore/Assets/anim_13fps_1024x600/: splash_anim_13fps_1024x600_001.h  splash_anim_13fps_1024x600_002.h  splash_anim_13fps_1024x600_003.h  splash_anim_13fps_1024x600_004.h  splash_anim_13fps_1024x600_005.h  splash_anim_13fps_1024x600_006.h  splash_anim_13fps_1024x600_007.h  splash_anim_13fps_1024x600_008.h  splash_anim_13fps_1024x600_009.h  splash_anim_13fps_1024x600_010.h  splash_anim_13fps_1024x600_011.h  splash_anim_13fps_1024x600_012.h  splash_anim_13fps_1024x600_013.h  splash_anim_13fps_1024x600_014.h  splash_anim_13fps_1024x600_015.h  splash_anim_13fps_1024x600_016.h  splash_anim_13fps_1024x600_017.h  splash_anim_13fps_1024x600_018.h  splash_anim_13fps_1024x600_019.h  splash_anim_13fps_1024x600_020.h  splash_anim_13fps_1024x600_021.h  splash_anim_13fps_1024x600_022.h  splash_anim_13fps_1024x600_023.h  splash_anim_13fps_1024x600_024.h  splash_anim_13fps_1024x600_025.h  (+1 more)
Utilities/M33TD_NSAppCore/Common/: app_common.h  display_utils.c  display_utils.h
Utilities/M33TD_NSAppCore/Config/: app_tasks_config_template.h  nsappcore_config_template.h
Utilities/M33TD_NSAppCore/Includes/: btn_monitor_driver.h  display_driver.h  display_panel_config.h  led_driver.h  logger_output_driver.h  nsappcore_version.h  openamp_driver.h  remoteproc_driver.h
Utilities/M33TD_NSAppCore/postbuild/: CMakeLists.txt
Utilities/ResourcesManager/: res_mgr.c
(+1055 files in other folders)
